--- a/web/src/main/resources/org/geogebra/web/resources/scss/toolbar-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/toolbar-styles.scss
@@ -349,41 +349,21 @@
     		}
 		}
 		.moveMoveBtnUp {
-			animation-name: moveUp;
-	   		animation-duration: 0.4s;
 	   	 	bottom: calc(68px + 80px);
+	   	 	transition: bottom 0.4s ease;
 		}
 		.moveMoveBtnDown {
-			animation-name: moveDown;
-	   		animation-duration: 0.4s;
 	   	 	bottom: 68px;
+	   	 	transition: bottom 0.4s ease;
 		}
-		@keyframes moveUp {
-		0% {bottom: 68px;}
-		100% {bottom: calc(68px + 80px);}
-	}
-		@keyframes moveDown {
-		0% {bottom: calc(68px + 80px);}
-		100% {bottom: 68px;}
-	}
 		.moveMoveBtnUpSmall {
-			animation-name: moveUpSmall;
-	   		animation-duration: 0.4s;
 	   	 	bottom: calc(68px + 48px);
+	   	 	transition: bottom 0.4s ease;
 		}
 		.moveMoveBtnDownSmall {
-			animation-name: moveDownSmall;
-	   		animation-duration: 0.4s;
 	   	 	bottom: 68px;
+	   	 	transition: bottom 0.4s ease;
 		}
-		@keyframes moveUpSmall {
-		0% {bottom: 68px;}
-		100% {bottom: calc(68px + 48px);}
-	}
-		@keyframes moveDownSmall {
-		0% {bottom: calc(68px + 48px);}
-		100% {bottom: 68px;}
-	}
 	}
 	
 	.algebra {
